lots of reworking

--- a/Web Services/Step 2/frontend/third_variant_index.html
+++ b/Web Services/Step 2/frontend/third_variant_index.html
@@ -12,9 +12,13 @@
 	<p>Calculation</p>
 	<input type="text" id="calculation">
 	<input type="button" id="calculation_button" value="Submit">
+	
+	<p id="result"></p>
 
 	<p>Sine</p>
 	<input type="text" id="sine">
 	<input type="button" id="sine_button" value="Submit">
+
+	<canvas id="graph" width="640" height="480"></canvas>
 </body>
 </html>
