fixed sine calculation

--- a/Web Services/Step 3/frontend/index.html
+++ b/Web Services/Step 3/frontend/index.html
@@ -13,10 +13,12 @@
 	<input type="text" id="calculation">
 	<input type="button" id="calculation_button" value="Submit">
 	<input type="button" id="simplify_button" value="Simplify">
+	<p id="result"></p>
 
 	<p>Sine</p>
 	<input type="text" id="sine">
 	<input type="button" id="sine_button" value="Submit">
+	<canvas id="graph" width="260" height="260"></canvas>
 
 	<p>Set cache size</p>
 	<input type="text" id="cache_size">
